Fixed center property on rellax

--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -21,7 +21,9 @@
     {{ content }}
     <script src="../assets/js/rellax.min.js"></script>
     <script>
-      var rellax = new Rellax('.rellax');
+      var rellax = new Rellax('.rellax', {
+      center: true
+      });
     </script>
 </body>
 </html>
