--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         <div class="col-3 footer-text">
           <h1 class="mb-5">Menu</h1>
           <h2>
-              <a href="/">Home</a>
+              <a href="/">Home</a><br>
               <a href="/">Who We Are</a><br>
               <a href="/">Projects</a><br>
               <a href="/">Get Involved</a><br>
