--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <link rel="shortcut icon" href="../assets/icons/icon.png"  />
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Coming soon from Tom Chung and Liam Chung">
-  <title>Coming Soon | CreativePutty</title>
+
+  <title><McLuhan Foundation</title>
 
   <link rel="stylesheet" href="../assets/css/bootstrap.css">
+  <link rel="stylesheet" href="../assets/css/screen-sizes.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/fader.css">
-  <link rel="stylesheet" href="../assets/css/screen-sizes.css">
-  <link rel="stylesheet" href="../assets/css/fonts.css">
+  <link rel="stylesheet" href="../assets/css/colours.css">
+  <link rel="stylesheet" href="../assets/fonts/font.css">
 
+
+  <meta property="og:image" content="<?php echo get_template_directory_uri(); ?>/screenshot.png">
+  <?php wp_head();?>
 </head>
-<body id="body">
-    <svg id="fader"></svg>
-    <script src="../assets/js/fade.js"></script>
-    <script> fadeInPage(); </script>
 
-    {{ content }}
+<body <?php body_class(); ?> id="body">
+  <svg id="fader"></svg>
+  <script> fadeInPage(); </script>
+
+  {{ content }}
 
 </body>
 </html>
