--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -13,12 +13,9 @@
   <link rel="stylesheet" href="../assets/css/colours.css">
   <link rel="stylesheet" href="../assets/fonts/font.css">
 
-
-  <meta property="og:image" content="<?php echo get_template_directory_uri(); ?>/screenshot.png">
-  <?php wp_head();?>
 </head>
 
-<body <?php body_class(); ?> id="body">
+<body id="body">
   <svg id="fader"></svg>
   <script> fadeInPage(); </script>
 
