--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -16,8 +16,8 @@
 </head>
 
 <body id="body">
-  <svg id="fader"></svg>
-  <script> fadeInPage(); </script>
+  <!-- <svg id="fader"></svg>
+  <script> fadeInPage(); </script> -->
 
   {{ content }}
 
