attempt to fix menubar

--- a/_includes/top-bar.html
+++ b/_includes/top-bar.html
@@ -13,12 +13,10 @@
   </div>
 
   <div id="myNav" class="row align-items-center justify-content-center">
-      <!-- <?php wp_nav_menu(
-        array(
-          'menu' => 'Hamburger Menu',
-          'menu_class' => 'ham-menu'
-        )
-      );?> -->
+      <div class="menubar">
+        <a href="/approach">What We Do</a>
+        <a href="/about">About</a>
+      </div>
   </div>
 </div>
 
@@ -36,12 +34,10 @@
     <!-- nav menu -->
     <div class="reg col-10 text-right" style="z-index: 20">
       <div id="menubar" style="display: inline">
-        <!-- <?php wp_nav_menu(
-          array(
-            'theme_location' => 'top-menu',
-            'menu_class' => 'menubar'
-          )
-        );?> -->
+        <div class="menubar">
+          <a href="/approach">What We Do</a>
+          <a href="/about">About</a>
+        </div>
       </div>
     </div>
   </div>
