--- a/_includes/top-bar.html
+++ b/_includes/top-bar.html
@@ -35,8 +35,9 @@
     <div class="reg col-10 text-right" style="z-index: 20">
       <div id="menubar" style="display: inline">
         <div class="menubar">
-          <a href="/approach">What We Do</a>
-          <a href="/about">About</a>
+          <button style="margin-left: 2vw" href="/">Home</button>
+          <button style="margin-left: 2vw" href="/approach">What We Do</button>
+          <button style="margin-left: 2vw" href="/about">About</button>
         </div>
       </div>
     </div>
