path typos on imgs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="row align-items-center justify-content-between" style="height:8em">
     <!-- logo -->
     <div class="col-2 header-logo" style="padding-top: .5rem; padding-bottom: .5rem">
-      <img src="..assets/icon/LogoText.png" alt="">
+      <img src="../assets/icon/LogoText.png" alt="">
     </div>
 
     <!-- hamburger -->
@@ -12,12 +12,11 @@
     <!-- nav menu -->
     <div class="reg col-10 text-right" style="z-index: 20">
       <div id="menubar" style="display: inline">
-        <!-- <?php wp_nav_menu(
-          array(
-            'theme_location' => 'top-menu',
-            'menu_class' => 'menubar'
-          )
-        );?> -->
+        <div class="menubar">
+          <button style="margin-left: 2vw" href="/">Home</button>
+          <button style="margin-left: 2vw" href="/approach">What We Do</button>
+          <button style="margin-left: 2vw" href="/about">About</button>
+        </div>
       </div>
     </div>
   </div>
