--- a/_includes/top-bar.html
+++ b/_includes/top-bar.html
@@ -13,10 +13,11 @@
   </div>
 
   <div id="myNav" class="row align-items-center justify-content-center">
-      <div class="menubar">
-        <a href="/approach">What We Do</a>
-        <a href="/about">About</a>
-      </div>
+    <div class="menubar">
+      <button style="margin-left: 2vw" href="/">Home</button>
+      <button style="margin-left: 2vw" href="/approach">What We Do</button>
+      <button style="margin-left: 2vw" href="/about">About</button>
+    </div>
   </div>
 </div>
 
@@ -25,7 +26,7 @@
   <div class="row align-items-center justify-content-between" style="height:6em">
     <!-- logo -->
     <div class="col-2 header-logo" style="padding-top: .5rem; padding-bottom: .5rem">
-      <img src="..assets/icon/LogoText.png" alt="">
+      <img src="../assets/icon/LogoText.png" alt="">
     </div>
 
     <!-- hamburger -->
