--- a/_includes/top-bar.html
+++ b/_includes/top-bar.html
@@ -14,9 +14,9 @@
 
   <div id="myNav" class="row align-items-center justify-content-center">
     <div class="menubar">
-      <button style="margin-left: 2vw" href="/">Home</button>
-      <button style="margin-left: 2vw" href="/approach">What We Do</button>
-      <button style="margin-left: 2vw" href="/about">About</button>
+      <a style="margin-left: 2vw" href="/">Home</a>
+      <a style="margin-left: 2vw" href="/approach">What We Do</a>
+      <a style="margin-left: 2vw" href="/about">About</a>
     </div>
   </div>
 </div>
