--- a/_includes/top-bar.html
+++ b/_includes/top-bar.html
@@ -35,9 +35,9 @@
     <!-- nav menu -->
     <div class="reg col-10 text-right" style="z-index: 20">
       <div id="menubar" style="display: inline">
-          <a style="margin-left: 2vw" href="/">Home</a>
-          <a style="margin-left: 2vw" href="/approach">What We Do</a>
-          <a style="margin-left: 2vw" href="/about">About</a>
+          <a style="margin-left: 2vw; font-family: 'DM-Sans-R'" href="/">Home</a>
+          <a style="margin-left: 2vw; font-family: 'DM-Sans-R'" href="/approach">What We Do</a>
+          <a style="margin-left: 2vw; font-family: 'DM-Sans-R'" href="/about">About</a>
       </div>
     </div>
   </div>
